Removed token for reference list URL's and added More !mypawn commands to jumbotron

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
     <title>JamieTheAverage's Item List</title>
     <script type="text/javascript">
-        const itemListURL = "https://raw.githubusercontent.com/vengeanceaurelith/jamietheaverage-list/master/StoreItems.json?token=ANWKAYPJZYLRD4MGXZ66ALK56E2DO";
-        const eventListURL = "https://raw.githubusercontent.com/vengeanceaurelith/jamietheaverage-list/master/StoreItems.json?token=ANWKAYKFPB6PGYKNOVLO7OK56E2ES";
+        const itemListURL = "https://raw.githubusercontent.com/vengeanceaurelith/jamietheaverage-list/master/StoreItems.json";
+        const eventListURL = "https://raw.githubusercontent.com/vengeanceaurelith/jamietheaverage-list/master/StoreItems.json";
     </script>
 </head>
 
@@ -49,9 +49,12 @@
                     <li class="list-group-item">!modsettings - gives user info on how many coins are being earned and global settings</li>
                     <li class="list-group-item">!giftcoins - Syntax: !giftcoins @username 100 - give another viewer your coins</li>
                     <li class="list-group-item">!toolkitcmds - shows all available commands to the user, this does not translate by default so it can be universally recognized.</li>
-                    <li class="list-group-item">!buy ticket - join the viewer name queue</li>
+                    <li class="list-group-item">!joinqueue - join the viewer name queue</li>
                     <li class="list-group-item">!mypawnstory - view information about your pawns backstory</li>
                     <li class="list-group-item">!mypawnskills - view information about your pawns skills</li>
+			<li class="list-group-item">!mypawnhealth - view information about your pawn's health</li>
+                    <li class="list-group-item">!mypawnbody - view information about your pawn's body</li>
+                    <li class="list-group-item">!mypawngear - view information about your pawn's gear</li>
                 </ul>
             </div>
         </div>
